force-app/main/default/objects/Account/fields/BillingAddress__c.field-meta.xml
<CustomField>
    <fullName>BillingAddress__c</fullName>
    <label>Billing Address</label>
    <type>Address</type>
</CustomField>