force-app/main/default/objects/Account/fields/PartnerType__c.field-meta.xml
<CustomField>
    <fullName>PartnerType__c</fullName>
    <label>Partner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ForwardingOffice</fullName>
                <label>출고사무소</label>
            </value>
            <value>
                <fullName>SalesAgency</fullName>
                <label>판매대리점</label>
            </value>
            <value>
                <fullName>ServiceCenter</fullName>
                <label>서비스센터</label>
            </value>
            <value>
                <fullName>PartsSupplier</fullName>
                <label>부품공급사</label>
            </value>
            <value>
                <fullName>DeliveryCompany</fullName>
                <label>배송업체</label>
            </value>
            <value>
                <fullName>시스템</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>