force-app/main/default/objects/Account/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>서울/경기/인천</fullName>
            </value>
            <value>
                <fullName>충북/강원</fullName>
            </value>
            <value>
                <fullName>대전/충남</fullName>
            </value>
            <value>
                <fullName>광주/전북/전남</fullName>
            </value>
            <value>
                <fullName>대구/경북</fullName>
            </value>
            <value>
                <fullName>부산/경남</fullName>
            </value>
            <value>
                <fullName>경기</fullName>
            </value>
            <value>
                <fullName>인천</fullName>
            </value>
            <value>
                <fullName>강원</fullName>
            </value>
            <value>
                <fullName>충북</fullName>
            </value>
            <value>
                <fullName>충남</fullName>
            </value>
            <value>
                <fullName>세종</fullName>
            </value>
            <value>
                <fullName>대전</fullName>
            </value>
            <value>
                <fullName>경북</fullName>
            </value>
            <value>
                <fullName>전북</fullName>
            </value>
            <value>
                <fullName>광주</fullName>
            </value>
            <value>
                <fullName>전남</fullName>
            </value>
            <value>
                <fullName>경남</fullName>
            </value>
            <value>
                <fullName>울산</fullName>
            </value>
            <value>
                <fullName>부산</fullName>
            </value>
            <value>
                <fullName>제주</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>